--- a/examples/2.save/config.yaml
+++ b/examples/2.save/config.yaml
@@ -1,8 +1,10 @@
 rpc_node: https://eth-mainnet.g.alchemy.com/v2/kk6oTEe0a35zzK3Ia67SZtzzibO2N8Fq
+db_name: sqlite.db
 subscriptions:
   - alias: token
-    contract: 0x2260fac5e5542a773aa44fbcfedf7c193bc2c599
-    abi_file: ../abi.json
+    contract: 
+      - 0x2260fac5e5542a773aa44fbcfedf7c193bc2c599
+    abi_file: ./erc20.json
     event_name: Transfer
     filter: 
     start_block: 15817750
