--- a/examples/2.save/config.yaml
+++ b/examples/2.save/config.yaml
@@ -1,5 +1,5 @@
 rpc_node: https://eth-mainnet.g.alchemy.com/v2/kk6oTEe0a35zzK3Ia67SZtzzibO2N8Fq
-db_name: sqlite.db
+
 subscriptions:
   - alias: token
     contract: 
@@ -8,3 +8,7 @@ subscriptions:
     event_name: Transfer
     filter: 
     start_block: 15817750
+db:
+  type: sqlite
+  dsn: sqlite.db
+  log_level: 2
