--- a/examples/2.save/config.yaml
+++ b/examples/2.save/config.yaml
@@ -1,5 +1,4 @@
 rpc_node: https://eth-mainnet.g.alchemy.com/v2/kk6oTEe0a35zzK3Ia67SZtzzibO2N8Fq
-
 subscriptions:
   - alias: token
     contract: 
@@ -9,6 +8,6 @@ subscriptions:
     filter: 
     start_block: 15817750
 db:
-  type: sqlite
+  engine: sqlite
   dsn: sqlite.db
   log_level: 2
